--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <h1>Welcome to your website!</h1>
+    <h1>Welcome to Chris Larham's colour-changing website, courtesy of the good folks at Codecademy!</h1>
     <button id="clap-button" class="button">👏</button>
   </div>
 </body>
